include ../common.mk

SUBDIRS = Xproto Xopen Xlib3 Xlib4

CLEANFILES = */*/tet_lock
DISTCLEANFILES = */*/*.log */*/*.log.tmp

.PHONY: $(TESTS)
TESTS = $(Xproto_TESTS) $(Xopen_TESTS) $(Xlib3_TESTS) $(Xlib4_TESTS)

# Helpful pattern target for testing subsets (test-Xopen, etc.)
test-%:
	@$(MAKE) $(AM_MAKEFLAGS) check TESTS='$($*_TESTS)'

Xproto_TESTS = \
	pAllocColor \
	pAllocColorCells \
	pAllocColorPlanes \
	pAllocNamedColor \
	pAllowEvents \
	pBadRequest \
	pBell \
	pChangeActivePointerGrab \
	pChangeGC \
	pChangeHosts \
	pChangeKeyboardControl \
	pChangeKeyboardMapping \
	pChangePointerControl \
	pChangeProperty \
	pChangeSaveSet \
	pChangeWindowAttributes \
	pClearArea \
	pCloseFont \
	pConfigureWindow \
	pConvertSelection \
	pCopyArea \
	pCopyColormapAndFree \
	pCopyGC \
	pCopyPlane \
	pCirculateWindow \
	pCreateColormap \
	pCreateCursor \
	pCreateGC \
	pCreateGlyphCursor \
	pCreatePixmap \
	pCreateWindow \
	pDeleteProperty \
	pDestroySubwindows \
	pDestroyWindow \
	pFillPoly \
	pFreeColormap \
	pFreeColors \
	pFreeCursor \
	pForceScreenSaver \
	pFreeGC \
	pFreePixmap \
	pGrabButton \
	pGrabKey \
	pGrabKeyboard \
	pGrabPointer \
	pGrabServer \
	pGetAtomName \
	pGetFontPath \
	pGetGeometry \
	pGetImage \
	pGetInputFocus \
	pGetKeyboardControl \
	pGetKeyboardMapping \
	pGetModifierMapping \
	pGetMotionEvents \
	pGetPointerControl \
	pGetPointerMapping \
	pGetProperty \
	pGetScreenSaver \
	pGetSelectionOwner \
	pGetWindowAttributes \
	pImageText16 \
	pImageText8 \
	pInstallColormap \
	pInternAtom \
	pKillClient \
	pLookupColor \
	pListExtensions \
	pListFonts \
	pListFontsWithInfo \
	pListHosts \
	pListInstalledColormaps \
	pListProperties \
	pMapSubwindows \
	pMapWindow \
	pNoOperation \
	pOpenDisplay \
	pOpenFont \
	pPolyArc \
	pPolyFillArc \
	pPolyFillRectangle \
	pPolyLine \
	pPolyPoint \
	pPolyRectangle \
	pPolySegment \
	pPolyText16 \
	pPolyText8 \
	pPutImage \
	pQueryBestSize \
	pQueryColors \
	pQueryExtension \
	pQueryFont \
	pQueryKeymap \
	pQueryPointer \
	pQueryTree \
	pQueryTextExtents \
	pRecolorCursor \
	pReparentWindow \
	pRotateProperties \
	pSendEvent \
	pSetAccessControl \
	pSetClipRectangles \
	pSetCloseDownMode \
	pSetDashes \
	pSetFontPath \
	pSetInputFocus \
	pSetModifierMapping \
	pSetPointerMapping \
	pStoreColors \
	pStoreNamedColor \
	pSetScreenSaver \
	pSetSelectionOwner \
	pTranslateCoords \
	pUngrabButton \
	pUngrabKey \
	pUngrabKeyboard \
	pUngrabPointer \
	pUngrabServer \
	pUnmapSubwindows \
	pUnmapWindow \
	pUninstallColormap \
	pWarpPointer

Xopen_TESTS = \
	xXAllocNamedColor \
	xcursorfont \
	xXCreateFontCursor \
	xkeysym \
	xkeysymdef \
	xXKeysymToKeycode \
	xXLookupColor \
	xXStringToKeysym

Xlib3_TESTS = \
	XAllPlanes \
	XBlackPixel \
	BlackPixel \
	XBlackPixelOfScreen \
	BlackPixelOfScreen \
	XBitmapBitOrder \
	BitmapBitOrder \
	XBitmapPad \
	BitmapPad \
	XBitmapUnit \
	BitmapUnit \
	XCellsOfScreen \
	CellsOfScreen \
	XCloseDisplay \
	XConnectionNumber \
	ConnectionNumber \
	XDefaultColormap \
	DefaultColormap \
	XDefaultColormapOfScreen \
	DefaultColormapOfScreen \
	XDefaultDepth \
	DefaultDepth \
	XDefaultDepthOfScreen \
	DefaultDepthOfScreen \
	XDefaultGC \
	DefaultGC \
	XDefaultGCOfScreen \
	DefaultGCOfScreen \
	XDefaultRootWindow \
	DefaultRootWindow \
	XDefaultScreen \
	DefaultScreen \
	XDefaultScreenOfDisplay \
	DefaultScreenOfDisplay \
	XDefaultVisual \
	DefaultVisual \
	XDefaultVisualOfScreen \
	DefaultVisualOfScreen \
	XDoesBackingStore \
	DoesBackingStore \
	XDisplayCells \
	DisplayCells \
	XDisplayHeight \
	DisplayHeight \
	XDisplayHeightMM \
	DisplayHeightMM \
	XDisplayOfScreen \
	DisplayOfScreen \
	XDisplayPlanes \
	DisplayPlanes \
	XDisplayString \
	DisplayString \
	XDisplayWidth \
	DisplayWidth \
	XDisplayWidthMM \
	DisplayWidthMM \
	XDoesSaveUnders \
	DoesSaveUnders \
	XEventMaskOfScreen \
	EventMaskOfScreen \
	XFree \
	XHeightMMOfScreen \
	HeightMMOfScreen \
	XHeightOfScreen \
	HeightOfScreen \
	XImageByteOrder \
	ImageByteOrder \
	XListDepths \
	XLastKnownRequestProcessed \
	LastKnownRequestProcessed \
	XListPixmapFormats \
	XMinCmapsOfScreen \
	MinCmapsOfScreen \
	XMaxCmapsOfScreen \
	MaxCmapsOfScreen \
	XNoOp \
	XNextRequest \
	NextRequest \
	XOpenDisplay \
	XPlanesOfScreen \
	PlanesOfScreen \
	XProtocolRevision \
	ProtocolRevision \
	XProtocolVersion \
	ProtocolVersion \
	XQLength \
	QLength \
	XRootWindow \
	RootWindow \
	XRootWindowOfScreen \
	RootWindowOfScreen \
	XScreenCount \
	ScreenCount \
	XScreenNumberOfScreen \
	XScreenOfDisplay \
	ScreenOfDisplay \
	XServerVendor \
	ServerVendor \
	XSetCloseDownMode \
	XVendorRelease \
	VendorRelease \
	XWidthMMOfScreen \
	WidthMMOfScreen \
	XWidthOfScreen \
	WidthOfScreen \
	XWhitePixel \
	WhitePixel \
	XWhitePixelOfScreen \
	WhitePixelOfScreen

Xlib4_TESTS = \
	XChangeWindowAttributes \
	XConfigureWindow \
	XCirculateSubwindows \
	XCirculateSubwindowsDown \
	XCirculateSubwindowsUp \
	XCreateSimpleWindow \
	XCreateWindow \
	XDefineCursor \
	XDestroySubwindows \
	XDestroyWindow \
	XLowerWindow \
	XMapRaised \
	XMapSubwindows \
	XMapWindow \
	XMoveResizeWindow \
	XMoveWindow \
	XRestackWindows \
	XRaiseWindow \
	XResizeWindow \
	XSetWindowBackground \
	XSetWindowBackgroundPixmap \
	XSetWindowBorder \
	XSetWindowBorderPixmap \
	XSetWindowBorderWidth \
	XSetWindowColormap \
	XUndefineCursor \
	XUnmapSubwindows \
	XUnmapWindow \
	XVisualIDFromVisual
