include ../common.mk

SUBDIRS = Xproto Xopen Xlib3 Xlib4 Xlib5 Xlib6 Xlib7 Xlib8 Xlib9 Xlib10 \
	Xlib11 Xlib12 Xlib13 Xlib14 Xlib15 Xlib16 Xlib17

CLEANFILES = */*/tet_lock
DISTCLEANFILES = */*/*.log */*/*.log.tmp

.PHONY: $(TESTS)
TESTS = $(Xproto_TESTS) $(Xopen_TESTS) $(Xlib3_TESTS) $(Xlib4_TESTS) \
	$(Xlib5_TESTS) $(Xlib6_TESTS) $(Xlib7_TESTS) $(Xlib8_TESTS) \
	$(Xlib9_TESTS) $(Xlib10_TESTS) $(Xlib11_TESTS) $(Xlib12_TESTS) \
	$(Xlib13_TESTS) $(Xlib14_TESTS) $(Xlib15_TESTS) $(Xlib16_TESTS) \
	$(Xlib17_TESTS)

# Helpful pattern target for testing subsets (test-Xopen, etc.)
test-%:
	@$(MAKE) $(AM_MAKEFLAGS) check TESTS='$($*_TESTS)'

Xproto_TESTS = \
	pAllocColor \
	pAllocColorCells \
	pAllocColorPlanes \
	pAllocNamedColor \
	pAllowEvents \
	pBadRequest \
	pBell \
	pChangeActivePointerGrab \
	pChangeGC \
	pChangeHosts \
	pChangeKeyboardControl \
	pChangeKeyboardMapping \
	pChangePointerControl \
	pChangeProperty \
	pChangeSaveSet \
	pChangeWindowAttributes \
	pClearArea \
	pCloseFont \
	pConfigureWindow \
	pConvertSelection \
	pCopyArea \
	pCopyColormapAndFree \
	pCopyGC \
	pCopyPlane \
	pCirculateWindow \
	pCreateColormap \
	pCreateCursor \
	pCreateGC \
	pCreateGlyphCursor \
	pCreatePixmap \
	pCreateWindow \
	pDeleteProperty \
	pDestroySubwindows \
	pDestroyWindow \
	pFillPoly \
	pFreeColormap \
	pFreeColors \
	pFreeCursor \
	pForceScreenSaver \
	pFreeGC \
	pFreePixmap \
	pGrabButton \
	pGrabKey \
	pGrabKeyboard \
	pGrabPointer \
	pGrabServer \
	pGetAtomName \
	pGetFontPath \
	pGetGeometry \
	pGetImage \
	pGetInputFocus \
	pGetKeyboardControl \
	pGetKeyboardMapping \
	pGetModifierMapping \
	pGetMotionEvents \
	pGetPointerControl \
	pGetPointerMapping \
	pGetProperty \
	pGetScreenSaver \
	pGetSelectionOwner \
	pGetWindowAttributes \
	pImageText16 \
	pImageText8 \
	pInstallColormap \
	pInternAtom \
	pKillClient \
	pLookupColor \
	pListExtensions \
	pListFonts \
	pListFontsWithInfo \
	pListHosts \
	pListInstalledColormaps \
	pListProperties \
	pMapSubwindows \
	pMapWindow \
	pNoOperation \
	pOpenDisplay \
	pOpenFont \
	pPolyArc \
	pPolyFillArc \
	pPolyFillRectangle \
	pPolyLine \
	pPolyPoint \
	pPolyRectangle \
	pPolySegment \
	pPolyText16 \
	pPolyText8 \
	pPutImage \
	pQueryBestSize \
	pQueryColors \
	pQueryExtension \
	pQueryFont \
	pQueryKeymap \
	pQueryPointer \
	pQueryTree \
	pQueryTextExtents \
	pRecolorCursor \
	pReparentWindow \
	pRotateProperties \
	pSendEvent \
	pSetAccessControl \
	pSetClipRectangles \
	pSetCloseDownMode \
	pSetDashes \
	pSetFontPath \
	pSetInputFocus \
	pSetModifierMapping \
	pSetPointerMapping \
	pStoreColors \
	pStoreNamedColor \
	pSetScreenSaver \
	pSetSelectionOwner \
	pTranslateCoords \
	pUngrabButton \
	pUngrabKey \
	pUngrabKeyboard \
	pUngrabPointer \
	pUngrabServer \
	pUnmapSubwindows \
	pUnmapWindow \
	pUninstallColormap \
	pWarpPointer

Xopen_TESTS = \
	xXAllocNamedColor \
	xcursorfont \
	xXCreateFontCursor \
	xkeysym \
	xkeysymdef \
	xXKeysymToKeycode \
	xXLookupColor \
	xXStringToKeysym

Xlib3_TESTS = \
	XAllPlanes \
	XBlackPixel \
	BlackPixel \
	XBlackPixelOfScreen \
	BlackPixelOfScreen \
	XBitmapBitOrder \
	BitmapBitOrder \
	XBitmapPad \
	BitmapPad \
	XBitmapUnit \
	BitmapUnit \
	XCellsOfScreen \
	CellsOfScreen \
	XCloseDisplay \
	XConnectionNumber \
	ConnectionNumber \
	XDefaultColormap \
	DefaultColormap \
	XDefaultColormapOfScreen \
	DefaultColormapOfScreen \
	XDefaultDepth \
	DefaultDepth \
	XDefaultDepthOfScreen \
	DefaultDepthOfScreen \
	XDefaultGC \
	DefaultGC \
	XDefaultGCOfScreen \
	DefaultGCOfScreen \
	XDefaultRootWindow \
	DefaultRootWindow \
	XDefaultScreen \
	DefaultScreen \
	XDefaultScreenOfDisplay \
	DefaultScreenOfDisplay \
	XDefaultVisual \
	DefaultVisual \
	XDefaultVisualOfScreen \
	DefaultVisualOfScreen \
	XDoesBackingStore \
	DoesBackingStore \
	XDisplayCells \
	DisplayCells \
	XDisplayHeight \
	DisplayHeight \
	XDisplayHeightMM \
	DisplayHeightMM \
	XDisplayOfScreen \
	DisplayOfScreen \
	XDisplayPlanes \
	DisplayPlanes \
	XDisplayString \
	DisplayString \
	XDisplayWidth \
	DisplayWidth \
	XDisplayWidthMM \
	DisplayWidthMM \
	XDoesSaveUnders \
	DoesSaveUnders \
	XEventMaskOfScreen \
	EventMaskOfScreen \
	XFree \
	XHeightMMOfScreen \
	HeightMMOfScreen \
	XHeightOfScreen \
	HeightOfScreen \
	XImageByteOrder \
	ImageByteOrder \
	XListDepths \
	XLastKnownRequestProcessed \
	LastKnownRequestProcessed \
	XListPixmapFormats \
	XMinCmapsOfScreen \
	MinCmapsOfScreen \
	XMaxCmapsOfScreen \
	MaxCmapsOfScreen \
	XNoOp \
	XNextRequest \
	NextRequest \
	XOpenDisplay \
	XPlanesOfScreen \
	PlanesOfScreen \
	XProtocolRevision \
	ProtocolRevision \
	XProtocolVersion \
	ProtocolVersion \
	XQLength \
	QLength \
	XRootWindow \
	RootWindow \
	XRootWindowOfScreen \
	RootWindowOfScreen \
	XScreenCount \
	ScreenCount \
	XScreenNumberOfScreen \
	XScreenOfDisplay \
	ScreenOfDisplay \
	XServerVendor \
	ServerVendor \
	XSetCloseDownMode \
	XVendorRelease \
	VendorRelease \
	XWidthMMOfScreen \
	WidthMMOfScreen \
	XWidthOfScreen \
	WidthOfScreen \
	XWhitePixel \
	WhitePixel \
	XWhitePixelOfScreen \
	WhitePixelOfScreen

Xlib4_TESTS = \
	XChangeWindowAttributes \
	XConfigureWindow \
	XCirculateSubwindows \
	XCirculateSubwindowsDown \
	XCirculateSubwindowsUp \
	XCreateSimpleWindow \
	XCreateWindow \
	XDefineCursor \
	XDestroySubwindows \
	XDestroyWindow \
	XLowerWindow \
	XMapRaised \
	XMapSubwindows \
	XMapWindow \
	XMoveResizeWindow \
	XMoveWindow \
	XRestackWindows \
	XRaiseWindow \
	XResizeWindow \
	XSetWindowBackground \
	XSetWindowBackgroundPixmap \
	XSetWindowBorder \
	XSetWindowBorderPixmap \
	XSetWindowBorderWidth \
	XSetWindowColormap \
	XUndefineCursor \
	XUnmapSubwindows \
	XUnmapWindow \
	XVisualIDFromVisual

Xlib5_TESTS = \
	XChangeProperty \
	XConvertSelection \
	XDeleteProperty \
	XGetAtomName \
	XGetGeometry \
	XGetSelectionOwner \
	XGetWindowAttributes \
	XGetWindowProperty \
	XInternAtom \
	XListProperties \
	XQueryPointer \
	XQueryTree \
	XRotateWindowProperties \
	XSetSelectionOwner \
	XTranslateCoordinates

Xlib6_TESTS = \
	XCreatePixmap \
	XCreateFontCursor \
	XCreateGlyphCursor \
	XCreatePixmapCursor \
	XFreeCursor \
	XFreePixmap \
	XQueryBestCursor \
	XRecolorCursor

Xlib7_TESTS = \
	XAllocColor \
	XAllocColorCells \
	XAllocColorPlanes \
	XAllocNamedColor \
	XCopyColormapAndFree \
	XCreateColormap \
	XFreeColormap \
	XFreeColors \
	XLookupColor \
	XParseColor \
	XQueryColor \
	XQueryColors \
	XStoreColor \
	XStoreColors \
	XStoreNamedColor \
	XcmsAllocColor \
	XcmsAddColorSpace \
	XcmsAddFunctionSet \
	XcmsAllocNamedColor \
	XcmsCCCOfColormap \
	XcmsConvertColors \
	XcmsCIELabQueryMaxLC \
	XcmsCIELabQueryMaxC \
	XcmsCIELabQueryMaxL \
	XcmsConversionProc \
	XcmsConversionProc \
	XcmsCreateCCC \
	XcmsDefaultCCC \
	XcmsDisplayOfCCC \
	XcmsFreeCCC \
	XcmsFormatOfPrefix \
	XcmsLookupColor \
	XcmsCIELabQueryMinL \
	XcmsPrefixOfFormat \
	XcmsQueryBlack \
	XcmsQueryBlue \
	XcmsQueryColor \
	XcmsQueryColors \
	XcmsQueryGreen \
	XcmsCIELuvQueryMaxC \
	XcmsCIELuvQueryMinL \
	XcmsCIELuvQueryMaxL \
	XcmsCIELuvQueryMaxLC \
	XcmsQueryRed \
	XcmsQueryWhite \
	XcmsScreenNumberOfCCC \
	XcmsStoreColor \
	XcmsStoreColors \
	XcmsTekHVCQueryMaxC \
	XcmsTekHVCQueryMinV \
	XcmsTekHVCQueryMaxV \
	XcmsTekHVCQueryMaxVC \
	XcmsTekHVCQueryMaxVSamples \
	XcmsVisualOfCCC \
	XcmsSetWhiteAdjustProc \
	XcmsScreenWhitePointOfCCC \
	XcmsClientWhitePointOfCCC \
	XcmsSetWhitePoint

Xlib8_TESTS = \
	XChangeGC \
	XCopyGC \
	XCreateGC \
	XFreeGC \
	XGContextFromGC \
	XGetGCValues \
	XQueryBestStipple \
	XQueryBestSize \
	XQueryBestTile \
	XSetArcMode \
	XSetBackground \
	XSetClipMask \
	XSetClipOrigin \
	XSetClipRectangles \
	XSetDashes \
	XSetFillRule \
	XSetFillStyle \
	XSetFunction \
	XSetFont \
	XSetForeground \
	XSetGraphicsExposures \
	XSetLineAttributes \
	XSetPlaneMask \
	XSetSubwindowMode \
	XSetStipple \
	XSetState \
	XSetTile \
	XSetTSOrigin \
	XFlushGC

Xlib9_TESTS = \
	XClearArea \
	XClearWindow \
	XCopyArea \
	XCopyPlane \
	XDrawArc \
	XDrawArcs \
	XDrawImageString16 \
	XDrawImageString \
	XDrawLine \
	XDrawLines \
	XDrawPoint \
	XDrawPoints \
	XDrawRectangle \
	XDrawRectangles \
	XDrawSegments \
	XDrawString \
	XDrawString16 \
	XDrawText \
	XDrawText16 \
	XFillArc \
	XFillArcs \
	XFillPolygon \
	XFillRectangle \
	XFillRectangles \
	XFreeFont \
	XFreeFontInfo \
	XFreeFontNames \
	XFreeFontPath \
	XGetFontProperty \
	XGetFontPath \
	XGetImage \
	XGetSubImage \
	XLoadFont \
	XLoadQueryFont \
	XListFonts \
	XListFontsWithInfo \
	XPutImage \
	XQueryFont \
	XQueryTextExtents16 \
	XQueryTextExtents \
	XSetFontPath \
	XTextExtents16 \
	XTextExtents \
	XTextWidth \
	XTextWidth16 \
	XUnloadFont

Xlib10_TESTS = \
	XActivateScreenSaver \
	XAddHost \
	XAddHosts \
	XAddToSaveSet \
	XChangeSaveSet \
	XDisableAccessControl \
	XEnableAccessControl \
	XForceScreenSaver \
	XGrabServer \
	XGetScreenSaver \
	XInstallColormap \
	XKillClient \
	XListHosts \
	XListInstalledColormaps \
	XRemoveFromSaveSet \
	XRemoveHost \
	XRemoveHosts \
	XReparentWindow \
	XResetScreenSaver \
	XSetAccessControl \
	XSetScreenSaver \
	XUngrabServer \
	XUninstallColormap

Xlib11_TESTS = \
	ButtonPress \
	ButtonRelease \
	ClientMessage \
	ColormapNotify \
	ConfigureNotify \
	ConfigureRequest \
	CirculateNotify \
	CirculateRequest \
	CreateNotify \
	DestroyNotify \
	EnterNotify \
	Expose \
	FocusIn \
	FocusOut \
	GraphicsExpose \
	GravityNotify \
	KeymapNotify \
	KeyPress \
	KeyRelease \
	LeaveNotify \
	MapNotify \
	MappingNotify \
	MapRequest \
	MotionNotify \
	NoExpose \
	PropertyNotify \
	ReparentNotify \
	ResizeRequest \
	SelectionClear \
	SelectionNotify \
	SelectionRequest \
	UnmapNotify \
	VisibilityNotify

Xlib12_TESTS = \
	XCheckIfEvent \
	XCheckMaskEvent \
	XCheckTypedEvent \
	XCheckTypedWindowEvent \
	XCheckWindowEvent \
	XDisplayMotionBufferSize \
	XDisplayName \
	XEventsQueued \
	XFlush \
	XGetErrorDatabaseText \
	XGetErrorText \
	XGetMotionEvents \
	XIfEvent \
	XMaskEvent \
	XNextEvent \
	XPeekEvent \
	XPeekIfEvent \
	XPending \
	XPutBackEvent \
	XSelectInput \
	XSendEvent \
	XSetAfterFunction \
	XSetErrorHandler \
	XSetIOErrorHandler \
	XSync \
	XSynchronize \
	XWindowEvent

Xlib13_TESTS = \
	XAllowEvents \
	XAutoRepeatOff \
	XAutoRepeatOn \
	XBell \
	XChangeActivePointerGrab \
	XChangeKeyboardControl \
	XChangeKeyboardMapping \
	XChangePointerControl \
	XDeleteModifiermapEntry \
	XDisplayKeycodes \
	XFreeModifiermap \
	XGrabButton \
	XGrabKey \
	XGrabKeyboard \
	XGrabPointer \
	XGetInputFocus \
	XGetKeyboardControl \
	XGetKeyboardMapping \
	XGetModifierMapping \
	XGetPointerControl \
	XGetPointerMapping \
	XInsertModifiermapEntry \
	XNewModifiermap \
	XQueryKeymap \
	XSetInputFocus \
	XSetModifierMapping \
	XSetPointerMapping \
	XUngrabButton \
	XUngrabKey \
	XUngrabKeyboard \
	XUngrabPointer \
	XWarpPointer

Xlib14_TESTS = \
	XBaseFontNameListOfFontSet \
	XCloseIM \
	XContextDependentDrawing \
	XCreateFontSet \
	XCreateIC \
	XDestroyIC \
	XDisplayOfIM \
	XExtentsOfFontSet \
	XFilterEvent \
	XFontsOfFontSet \
	XFreeFontSet \
	XGetICValues \
	XGetIMValues \
	XIMOfIC \
	XLocaleOfFontSet \
	XLocaleOfIM \
	XmbDrawImageString \
	XmbDrawString \
	XmbDrawText \
	XmbLookupString \
	XmbResetIC \
	XmbSetWMProperties \
	XmbTextEscapement \
	XmbTextExtents \
	XmbTextListToTextProperty \
	XmbTextPerCharExtents \
	XmbTextPropertyToTextList \
	XOpenIM \
	XSetICFocus \
	XSetICValues \
	XSupportsLocale \
	XSetLocaleModifiers \
	XUnsetICFocus \
	XVaCreateNestedList \
	XwcDrawImageString \
	XwcDrawString \
	XwcDrawText \
	XwcFreeStringList \
	XwcLookupString \
	XwcResetIC \
	XwcTextEscapement \
	XwcTextListToTextProperty \
	XwcTextPerCharExtents \
	XwcTextPropertyToTextList \
	XwcTextExtents

Xlib15_TESTS = \
	XAllocClassHint \
	XAllocIconSize \
	XAllocStandardColormap \
	XAllocSizeHints \
	XAllocWMHints \
	XFreeStringList \
	XFetchName \
	XGetClassHint \
	XGetCommand \
	XGetIconName \
	XGetIconSizes \
	XGetRGBColormaps \
	XGetTransientForHint \
	XGetTextProperty \
	XGetWMClientMachine \
	XGetWMColormapWindows \
	XGetWMHints \
	XGetWMIconName \
	XGetWMName \
	XGetWMNormalHints \
	XGetWMProtocols \
	XGetWMSizeHints \
	XIconifyWindow \
	XReconfigureWMWindow \
	XSetClassHint \
	XSetCommand \
	XSetIconName \
	XSetIconSizes \
	XSetRGBColormaps \
	XStringListToTextProperty \
	XStoreName \
	XSetTransientForHint \
	XSetTextProperty \
	XSetWMClientMachine \
	XSetWMColormapWindows \
	XSetWMHints \
	XSetWMIconName \
	XSetWMName \
	XSetWMNormalHints \
	XSetWMProperties \
	XSetWMProtocols \
	XSetWMSizeHints \
	XTextPropertyToStringList \
	XWithdrawWindow \
	XDefaultString

Xlib16_TESTS = \
	XrmDestroyDatabase \
	XrmGetFileDatabase \
	XrmGetResource \
	XrmGetStringDatabase \
	XrmInitialize \
	XrmMergeDatabases \
	XrmParseCommand \
	XrmPutFileDatabase \
	XrmPutLineResource \
	XrmPutResource \
	XrmPutStringResource \
	XrmQGetResource \
	XrmQGetSearchList \
	XrmQGetSearchResource \
	XrmQPutResource \
	XrmQPutStringResource \
	XrmQuarkToString \
	XrmStringToBindingQuarkList \
	XrmStringToQuark \
	XrmStringToQuarkList \
	XrmUniqueQuark \
	XResourceManagerString \
	XrmCombineDatabase \
	XrmCombineFileDatabase \
	XrmEnumerateDatabase \
	XrmGetDatabase \
	XrmLocaleOfDatabase \
	XrmPermStringToQuark \
	XrmSetDatabase \
	XScreenResourceString

Xlib17_TESTS = \
	XAddPixel \
	XClipBox \
	XCreateBitmapFromData \
	XCreateImage \
	XCreatePixmapFromBitmapData \
	XCreateRegion \
	XDeleteContext \
	XDestroyImage \
	XDestroyRegion \
	XEmptyRegion \
	XEqualRegion \
	XFindContext \
	XFetchBuffer \
	XFetchBytes \
	XGetDefault \
	XGetPixel \
	XGetVisualInfo \
	XIntersectRegion \
	IsCursorKey \
	IsFunctionKey \
	IsKeypadKey \
	IsModifierKey \
	IsMiscFunctionKey \
	IsPFKey \
	XKeycodeToKeysym \
	XKeysymToKeycode \
	XKeysymToString \
	XLookupKeysym \
	XLookupString \
	XMatchVisualInfo \
	XOffsetRegion \
	XPolygonRegion \
	XPointInRegion \
	Xpermalloc \
	XParseGeometry \
	XPutPixel \
	XRebindKeysym \
	XRectInRegion \
	XReadBitmapFile \
	XRefreshKeyboardMapping \
	XRotateBuffers \
	XSubImage \
	XSubtractRegion \
	XShrinkRegion \
	XStoreBuffer \
	XStoreBytes \
	XSetRegion \
	XStringToKeysym \
	XSaveContext \
	XUnionRectWithRegion \
	XUnionRegion \
	XUniqueContext \
	XWMGeometry \
	XWriteBitmapFile \
	XXorRegion
