AM_CPPFLAGS = -I../inc -I$(top_srcdir)/include -DTET_LITE
noinst_LIBRARIES = libapi.a
libapi_adir = $(top_srcdir)/lib
libapi_a_SOURCES = \
		dconfig.c \
		dresfile.c \
		errno.c \
		exit.c \
		getlist.c \
		getsys.c \
		getsysid.c \
		libvers.c \
		remexec.c \
		remkill.c \
		remtime.c \
		remwait.c \
		rtab.c \
		sync.c \
		tciface.c \
		tdiscon.c \
		tet_exec.c \
		tet_fork.c \
		tet_spawn.c

# This file didn't get compiled before the autotools conversion
#		dcancel.c 
