AM_CPPFLAGS = -I$(srcdir)/../inc -I$(top_srcdir)/include
noinst_LTLIBRARIES = libdtet2.la
libdtet2_la_SOURCES = \
		addarg.c \
		alarm.c \
		amsg.c \
		avmsg.c \
		basename.c \
		btmsg.c \
		bufchk.c \
		buftrace.c \
		dtmsg.c \
		dtsize.c \
		eaccess.c \
		equindex.c \
		errmap.c \
		errname.c \
		fappend.c \
		fcopy.c \
		fgetargs.c \
		fioclex.c \
		fork.c \
		ftoa.c \
		generror.c \
		genfatal.c \
		getargs.c \
		getcwd.c \
		getopt.c \
		globals.c \
		hexdump.c \
		iswin.c \
		ldst.c \
		llist.c \
		ltoa.c \
		ltoo.c \
		ltox.c \
		madir.c \
		maperr.c \
		mapsig.c \
		mapstat.c \
		mkdir.c \
		notty.c \
		optarg.c \
		prerror.c \
		ptflags.c \
		ptspid.c \
		ptstate.c \
		ptstype.c \
		pttype.c \
		ptype.c \
		putenv.c \
		remvar.c \
		repcode.c \
		reqcode.c \
		rescode.c \
		rtoa.c \
		sigmap.c \
		sigsafe.c \
		strstore.c \
		svote.c \
		sysbyid.c \
		sysent.c \
		systate.c \
		targs.c \
		tdump.c \
		tetdir.c \
		tetfcntl.c \
		tetsleep.c \
		tetspawn.c \
		tetstat.c \
		tetterm.c \
		tetunlnk.c \
		tfname.c \
		trace.c \
		unmaperr.c \
		unmapsig.c \
		valmsg.c \
		w32err.c \
		wait3.c \
		wsaerr.c \
		errmap.h \
		sigmap.h \
		trace.h
