noinst_LIBRARIES = libapi.a
libapi_a_CFLAGS = -I ../inc -I $(top_srcdir)/include
libapi_a_SOURCES = \
		cloop.c \
		fio.c \
		forkd.c \
		logon.c \
		msgbuf.c \
		ptab.c \
		sdasync.c \
		sdead.c \
		sderrmsg.c \
		sdsnget.c \
		sdsnrm.c \
		sdsnsys.c \
		sdtalk.c \
		sdusync.c \
		server.c \
		sloop.c \
		smain.c \
		sproc.c \
		talk.c \
		tcaccess.c \
		tccfnam.c \
		tcconf.c \
		tccopy.c \
		tcdir.c \
		tcerrmsg.c \
		tcexec.c \
		tcfio.c \
		tckill.c \
		tclfile.c \
		tcmexec.c \
		tcputenv.c \
		tcrsys.c \
		tcrxfile.c \
		tcsdir.c \
		tcshlock.c \
		tcsname.c \
		tctalk.c \
		tctdir.c \
		tctexec.c \
		tctime.c \
		tctsfile.c \
		tcuexec.c \
		tcunlink.c \
		tcwait.c \
		tcxconf.c \
		titcmenv.c \
		xdcfnam.c \
		xdcodesf.c \
		xderrmsg.c \
		xdfio.c \
		xdictp.c \
		xdrcfnam.c \
		xdresult.c \
		xdtalk.c \
		xdxfile.c \
		xdxrclose.c \
		xdxres.c \
		xdxropen.c \
		xdxrsend.c \
		xdxrsys.c
